[project]
name = "chialisp_stdlib"
description = "Chialisp `.clib` standard library files"
authors = [{name = "Richard Kiss", email = "him@richardkiss.com"}]
license = {file = "LICENSE"}
readme = "README.md"
version = "0.1.1"
dependencies = ["importlib_resources"]  # this is only needed for py38

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"
